# rust-bombfield

./: Cargo.toml  build.rs  index.html  ui.slint
assets/: bomb.xcf
pkg/: bombfield_wasm.d.ts  bombfield_wasm.js  bombfield_wasm_bg.js  bombfield_wasm_bg.wasm  bombfield_wasm_bg.wasm.d.ts  package.json
src/: main.rs
