[package]
name = "bombfield-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "0.3"
oorandom = "11.1"
getrandom = "0.2.7"

[build-dependencies]
slint-build = "0.3"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features=["console"] }
console_error_panic_hook = "0.1.5"
getrandom = { version = "0.2.2", features = ["js"] }